--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -109,15 +109,15 @@ environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:postgresql://localhost:5432/concot
+            url: jdbc:postgresql://localhost:5432/concot_dev
     test:
         dataSource:
             dbCreate: update
-            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/concot_test
     production:
         dataSource:
             dbCreate: none
-            url: jdbc:postgresql://localhost:5432/concot
+            url: jdbc:postgresql://localhost:5432/concot_prod
             properties:
                 jmxEnabled: true
                 initialSize: 5
